@@ -31,7 +31,7 @@ requires:
   Plack::Component: 0
   Plack::Util::Accessor: 0
   Readonly: 0
-  Tags::HTML::Page::Begin: 0.12
+  Tags::HTML::Page::Begin: 0.13
   Tags::HTML::Page::End: 0
   Tags::Output::Raw: 0
   perl: 5.8.0
