@@ -23,7 +23,7 @@ requires 'Encode' => 0;
 requires 'Error::Pure' => 0;
 requires 'Plack::Component' => 0;
 requires 'Plack::Util::Accessor' => 0;
-requires 'Tags::HTML::Page::Begin' => 0.12;
+requires 'Tags::HTML::Page::Begin' => 0.13;
 requires 'Tags::HTML::Page::End' => 0;
 requires 'Readonly' => 0;
 requires 'Tags::Output::Raw' => 0;
