@@ -35,7 +35,9 @@ test_psgi($app, sub {
 	is($res->code, 200, 'HTTP code (200).');
 	is($res->header('Content-Type'), 'text/html; charset=utf-8', 'Content type (HTML).');
 	my $expected_content = '<!DOCTYPE html>'."\n".'<html lang="en"><head><meta http-equiv="Content-Type" '.
-		'content="text/html; charset=utf-8" /><title>My app</title></head>'.
+		'content="text/html; charset=utf-8" />'.
+		'<meta name="viewport" content="width=device-width, initial-scale=1.0" />'.
+		'<title>My app</title></head>'.
 		'<body>Hello world</body></html>';
 	is($res->content, $expected_content, 'Content (real HTML content).');
 });
